# taskmanager-backend

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/config/: settings.py
src/config/settings/: __init__.py  base.py  dev.py  prod.py
