[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Shmaizer",email = "valerashmaizer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.10"
isort = "^6.0.1"
pre-commit = "^4.2.0"
ruff = "^0.12.0"
black = "^25.1.0"

